--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,22 @@
 {
     "require": {
         "php": ">=8.2.0",
-        "yiisoft/yii2": "~2.0.45"
+        "yiisoft/yii2": "~2.0.45",
+        "yiisoft/yii2-bootstrap5": "~2.0.1"
+    },
+    "require-dev": {
+        "yiisoft/yii2-gii": "~2.1.0",
+        "yiisoft/yii2-debug": "~2.1.0"
     },
     "repositories": [
         {
             "type": "composer",
             "url": "https://asset-packagist.org"
         }
-    ]
+    ],
+    "config": {
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
+        }
+    }
 }
