--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,9 +1,8 @@
-version: '3'
+version: "3.4"
 
 x-php-defaults: &php-defaults
   depends_on:
-     postgres :
-       condition: service_healthy
+    - postgres
   build: ./php
   volumes:
     - ~/.composer-docker/cache:/root/.composer/cache:delegated
